apps/ingresses/middlewares.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: autobuszjegy-redirect
spec:
  redirectRegex:
    regex: "^https?://autobuszjegy.hu/(.*)"
    replacement: "https://kalandozas.hu"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kalandozastravel-redirect
spec:
  redirectRegex:
    regex: "^https?://kalandozastravel.hu/(.*)"
    replacement: "https://kalandozas.hu/${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www-to-non-www
spec:
  redirectRegex:
    regex: "^https?://www.(.*)"
    replacement: "https://${1}"
    permanent: true
