apps/ingresses/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: redirect-placeholder
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autobuszjegy-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-autobuszjegy-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - autobuszjegy.hu
      secretName: autobuszjegy-tls
  rules:
    - host: autobuszjegy.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-placeholder
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kalandozastravel-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-kalandozastravel-redirect@kubernetescrd
spec:
  tls:
    - hosts:
        - kalandozastravel.hu
      secretName: kalandozastravel-tls
  rules:
    - host: kalandozastravel.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-placeholder
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-autobuszjegy-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-redirect-www-to-non-www@kubernetescrd
spec:
  tls:
    - hosts:
        - www.autobuszjegy.hu
      secretName: www-autobuszjegy-tls
  rules:
    - host: www.autobuszjegy.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-placeholder
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-contibus-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-redirect-www-to-non-www@kubernetescrd
spec:
  tls:
    - hosts:
        - www.contibus.hu
      secretName: www-contibus-tls
  rules:
    - host: www.contibus.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-placeholder
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-neoline-contitrans-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-redirect-www-to-non-www@kubernetescrd
spec:
  tls:
    - hosts:
        - www.neoline-contitrans.hu
      secretName: www-neoline-contitrans-tls
  rules:
    - host: www.neoline-contitrans.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-placeholder
                port:
                  number: 80
